Make compatible with Java 8